--- a/css/index.css
+++ b/css/index.css
@@ -1,20 +1,33 @@
+/* Importing other CSS files */
+@import url(./home-section.css);
+@import url(./issues.css);
+
 * {
+  /* CSS properties for complete website */
   box-sizing: border-box;
   margin: 0;
   font-family: "Quicksand", sans-serif;
-  color: #F5F0DA;
+  color: #f5f0da;
 }
+
 html {
+  /* Smooth Navigation */
   scroll-behavior: smooth;
 }
 
 body {
-  color: #F5F0DA;
-  background-color: rgb(0,85,85,0.75);
+  color: #f5f0da;
+  background-color: rgb(0, 85, 85, 0.75);
 }
 
-a {
+/* Top navigation bar */
+.topnav a {
+  float: left;
+  color: #f5f0da;
+  text-align: center;
+  padding: 20px 25px;
   text-decoration: none;
+  font-size: 20px;
 }
 
 .nav-bar {
@@ -26,16 +39,16 @@ a {
 }
 
 #home {
-  background: rgb(0,85,85,0.8) rgb(6,154,142,0.2);
+  background: rgb(0, 85, 85, 0.8) rgb(6, 154, 142, 0.2);
 }
 #issues {
-  background: rgb(0,85,85,0.8) rgb(6,154,142,0.2);
+  background: rgb(0, 85, 85, 0.8) rgb(6, 154, 142, 0.2);
 }
 #team {
-  background: rgb(0,85,85,0.8) rgb(6,154,142,0.2);
+  background: rgb(0, 85, 85, 0.8) rgb(6, 154, 142, 0.2);
 }
-#Goal{
-  background: rgb(0,85,85,0.8) rgb(6,154,142,0.2);
+#Goal {
+  background: rgb(0, 85, 85, 0.8) rgb(6, 154, 142, 0.2);
 }
 
 .nav {
@@ -45,7 +58,11 @@ a {
   left: 0;
   top: 50%;
   transform: translateY(-50%);
-  padding-left: 50px;
+}
+@media screen and (max-width: 500px) {
+  .nav {
+    padding-left: 10px;
+  }
 }
 
 .nav-item {
@@ -59,7 +76,7 @@ a {
 }
 
 .nav-link {
-  background: rgb(247,255,147,.5);
+  background: rgb(247, 255, 147, 0.5);
   border-radius: 50%;
   height: 15px;
   width: 15px;
@@ -68,13 +85,14 @@ a {
 }
 
 .nav-label {
-  color: #F5F0DA;
+  color: #f5f0da;
+  font-weight: bolder;
   opacity: 0;
   transition: opacity 0.1s;
 }
 
 .nav-link-selected {
-  background: #F7FF93;
+  background: #f7ff93;
   transform: scale(1.4);
 }
 
@@ -83,15 +101,4 @@ a {
   overflow: hidden;
   position: fixed;
   padding-left: 30px;
-}
-
-/* Top navigation bar */
-.topnav a {
-  float: left;
-  color: #F5F0DA;
-  text-align: center;
-  padding: 20px 25px;
-  text-decoration: none;
-  font-size: 30px;
-  margin-top:5%;
 }
