--- a/css/issues.css
+++ b/css/issues.css
@@ -1,11 +1,11 @@
-.text{
-  color:#069A8E;
-  font-size:36px;
+.text {
+  color: #069a8e;
+  font-size: 36px;
 }
 
 .modal-window {
   position: fixed;
-  background-color: rgb(0,85,85,0.75);
+  background-color: rgb(0, 85, 85, 0.75);
   top: 0;
   right: 0;
   bottom: 0;
@@ -42,7 +42,7 @@
 .modal-window h1 {
   font-size: 300%;
   margin: 0 0 15px;
-  color: rgb(0,85,85,.90);
+  color: rgb(0, 85, 85, 0.9);
 }
 
 .modal-close {
@@ -75,12 +75,12 @@
 }
 
 .btn {
-background: rgba( 247, 255, 147, 0.4 );
-box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
-backdrop-filter: blur( 20px );
--webkit-backdrop-filter: blur( 20px );
-border-radius: 10px;
-border: 1px solid rgba( 255, 255, 255, 0.18 );
+  background: rgba(247, 255, 147, 0.4);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(20px);
+  -webkit-backdrop-filter: blur(20px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
   text-decoration: none;
   height: 300px;
   width: 400px;
@@ -91,12 +91,12 @@ border: 1px solid rgba( 255, 255, 255, 0.18 );
 }
 
 .btn2 {
-background: rgba( 247, 255, 147, 0.4 );
-box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
-backdrop-filter: blur( 20px );
--webkit-backdrop-filter: blur( 20px );
-border-radius: 10px;
-border: 1px solid rgba( 255, 255, 255, 0.18 );
+  background: rgba(247, 255, 147, 0.4);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(20px);
+  -webkit-backdrop-filter: blur(20px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
   text-decoration: none;
   height: 300px;
   width: 400px;
@@ -106,12 +106,12 @@ border: 1px solid rgba( 255, 255, 255, 0.18 );
   margin-top: -70%;
 }
 .btn3 {
-background: rgba( 247, 255, 147, 0.4 );
-box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
-backdrop-filter: blur( 20px );
--webkit-backdrop-filter: blur( 20px );
-border-radius: 10px;
-border: 1px solid rgba( 255, 255, 255, 0.18 );
+  background: rgba(247, 255, 147, 0.4);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(20px);
+  -webkit-backdrop-filter: blur(20px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
   text-decoration: none;
   height: 300px;
   width: 400px;
@@ -125,12 +125,12 @@ border: 1px solid rgba( 255, 255, 255, 0.18 );
   padding-right: 0.3em;
 }
 
-.major{
+.major {
   font-size: 36px;
-  color: #F5F0DA;
+  color: #f5f0da;
   text-align: right;
-  position:absolute;
-  margin-top:100px;
+  position: absolute;
+  margin-top: 100px;
   margin-right: 50px;
   margin-left: 60%;
   font-size: 48px;
