--- a/css/home-section.css
+++ b/css/home-section.css
@@ -69,3 +69,16 @@
   max-width: 80%;
   margin-top: 25px;
 }
+
+@media screen and (max-width: 1870px) {
+  .button{
+    font-size: 18px;
+  }
+}
+
+
+@media screen and (max-width: 820px) {
+  .button{
+    display:none;
+  }
+}
