--- a/css/index.css
+++ b/css/index.css
@@ -59,9 +59,9 @@ body {
   top: 50%;
   transform: translateY(-50%);
 }
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 700px) {
   .nav {
-    padding-left: 10px;
+    padding-left: 0px;
   }
 }
 
@@ -103,3 +103,26 @@ body {
   padding-left: 30px;
   margin-top:1%
 }
+
+@media screen and (max-width: 685px) {
+  .topnav a:not(:first-child) {display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+}
+
+@media screen and (max-width: 685px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+}
+
