--- a/css/issues.css
+++ b/css/issues.css
@@ -205,3 +205,31 @@
     margin-left: 10%;
   }
 }
+
+.graph{
+  height: 90%;
+  margin-left: 30%;
+}
+
+@media screen and (max-width: 1386px){
+  .graph{
+    margin-left: 10%;
+    height: 400px;
+  }    
+  .text{
+    font-size: 24px;
+  }
+}
+
+@media screen and (max-width: 570px){
+  .graph{
+    margin-left: 1%;
+    height: 300px;
+  }    
+  .text{
+    font-size: 20px;
+  }
+}
+b{
+  color: #005555;
+}
