--- a/css/index.css
+++ b/css/index.css
@@ -126,3 +126,20 @@ body {
   }
 }
 
+.title{
+  font-size: 80px;
+  font-weight: bold;
+  color: #f7ff93;
+  margin-top: 10%;
+  margin-left: 80%;
+}
+
+@media screen and (max-width: 900px){
+  .title{
+    font-size: 50px;
+    font-weight: bold;
+    color: #f7ff93;
+    margin-top: 12%;
+    margin-left: 60%;
+  }
+}
