--- a/css/home-section.css
+++ b/css/home-section.css
@@ -3,6 +3,7 @@
 * Its imported directly to ./index.css
 */
 
+/* Home Screen CSS Starts */
 .home-screen {
   display: flex;
   justify-content: space-between;
@@ -17,15 +18,55 @@
   padding-bottom: 10px;
 }
 
+/* Home page content */
+.home-content {
+  font-size: 24px;
+  margin-top: 25px;
+}
+
 /* Home Page Image */
-.hero-img {
+.home-img {
   width: 60%;
+}
+
+/* Home Button CSS */
+.button {
+  background-image: linear-gradient(to right, #a1e3d8, #f3f293);
+  border: 3px solid #069a8e;
+  color: #003f3f;
+  padding: 10px 25px;
+  text-align: center;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  height: 70px;
+  width: 200px;
+  border-radius: 15px;
+  font-size: 24px;
+}
+
+/* Hover effects on button */
+.button:hover {
+  transform: translateY(-4px);
+  font-weight: bolder;
+}
+
+/* Media query at width = 1430 px */
+@media screen and (max-width: 1430px) {
+  .home-heading {
+    font-size: 45px;
+    /* reducing Home page heading font size */
+  }
+  .home-content {
+    font-size: 20px;
+    /* reducing Home page content font size */
+  }
 }
 
 /* Media query at width = 1110 px */
 @media screen and (max-width: 1110px) {
   .home-screen {
-    align-items: center;
     flex-direction: column;
     justify-content: center;
   }
@@ -35,58 +76,25 @@
   .home-heading {
     text-align: center;
   }
-}
-
-.button{
-  background-color: #A1E3D8;
-  border: 3px solid #069A8E;
-  color: #005555;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
-  cursor: pointer;
-  height: 70px;
-  width: 15%;
-  border-radius: 15px;
-  font-size: 24px;
-}
-
-.button:hover {
-  transform: translateY(-4px);
-}
-
-.button:active {
-  background-color: #069A8E;
-  box-shadow: 0 5px #A1E3D8;
-  transform: translateY(4px); 
-}
-
-.home-content{
-  font-size: 24px;
-  max-width: 80%;
-  margin-top: 25px;
-}
-
-@media screen and (max-width: 1870px) {
-  .button{
-    font-size: 18px;
-  }
-}
-
-
-@media screen and (max-width: 820px) {
-  .button{
-    display:none;
-  }
-}
-@media screen and (max-width:550px) {
-  .home-heading {
-    font-size: 32px;
-  }
   .home-content {
-    font-size: 18px;
+    text-align: center;
+  }
+  .button {
+    display: none;
+    /* Making button diappear at smaller view ports */
+  }
+  .topnav-link {
+    display: none;
+    /* Making navbar links diappear at smaller view ports */
   }
 }
+
+/* Media query at width = 550 px */
+@media screen and (max-width: 550px) {
+  .home-screen {
+    padding-left: 80px;
+    padding-right: 20px;
+  }
+}
+
+/* Home Screen CSS Ends */
