--- a/css/index.css
+++ b/css/index.css
@@ -16,12 +16,12 @@ html {
 }
 
 body {
-  color: #f5f0da;
   background-color: rgb(0, 85, 85, 0.75);
 }
 
 /* Top navigation bar */
 .topnav a {
+  /* CSS on the navbar links and the logo */
   float: left;
   color: #f5f0da;
   text-align: center;
@@ -31,23 +31,13 @@ body {
 }
 
 .nav-bar {
-  position: fixed; /* Fixed left navbar */
+  /* CSS for the left navigation bar */
+  position: fixed;
 }
 
 .section {
+  /* Different full screen sections in our web app. */
   height: 100vh;
-}
-
-#home {
-  background: rgb(0, 85, 85, 0.8) rgb(6, 154, 142, 0.2);
-}
-#issues {
-  background: rgb(0, 85, 85, 0.8) rgb(6, 154, 142, 0.2);
-}
-#team {
-  background: rgb(0, 85, 85, 0.8) rgb(6, 154, 142, 0.2);
-}
-#Goal {
   background: rgb(0, 85, 85, 0.8) rgb(6, 154, 142, 0.2);
 }
 
@@ -55,7 +45,7 @@ body {
   --nav-gap: 15px;
   padding: var(--nav-gap);
   position: fixed;
-  left: 50PX;
+  left: 50px;
   top: 50%;
   transform: translateY(-50%);
 }
@@ -78,8 +68,8 @@ body {
 .nav-link {
   background: rgb(247, 255, 147, 0.5);
   border-radius: 50%;
-  height: 20px;
-  width: 20px;
+  height: 15px;
+  width: 15px;
   margin-right: 10px;
   transition: transform 0.1s;
 }
@@ -101,11 +91,13 @@ body {
   overflow: hidden;
   position: fixed;
   padding-left: 30px;
-  margin-top:1%
+  margin-top: 1%;
 }
 
 @media screen and (max-width: 685px) {
-  .topnav a:not(:first-child) {display: none;}
+  .topnav a:not(:first-child) {
+    display: none;
+  }
   .topnav a.icon {
     float: right;
     display: block;
@@ -113,7 +105,9 @@ body {
 }
 
 @media screen and (max-width: 685px) {
-  .topnav.responsive {position: relative;}
+  .topnav.responsive {
+    position: relative;
+  }
   .topnav.responsive .icon {
     position: absolute;
     right: 0;
@@ -126,7 +120,7 @@ body {
   }
 }
 
-.title{
+.title {
   font-size: 80px;
   font-weight: bold;
   color: #f7ff93;
@@ -134,8 +128,8 @@ body {
   margin-left: 80%;
 }
 
-@media screen and (max-width: 900px){
-  .title{
+@media screen and (max-width: 900px) {
+  .title {
     font-size: 50px;
     font-weight: bold;
     color: #f7ff93;
@@ -144,8 +138,8 @@ body {
   }
 }
 
-@media screen and (max-width: 385px){
-  .nav{
+@media screen and (max-width: 385px) {
+  .nav {
     margin-left: -30px;
   }
 }
