--- a/css/index.css
+++ b/css/index.css
@@ -143,3 +143,18 @@ body {
     margin-left: -30px;
   }
 }
+
+.heading {
+        margin-top: 20%;
+        text-align: left;
+        font-size: 80px;
+        margin-left: 10%;
+      }
+
+      .content-line {
+        padding-left: 0px;
+        margin-left: 10%;
+        margin-top: 6%;
+        font-size: 34px;
+        max-width: 80%;
+      }
