--- a/css/issues.css
+++ b/css/issues.css
@@ -1,5 +1,5 @@
 .text {
-  color: #069a8e;
+  color: #005555;
   font-size: 36px;
 }
 
@@ -31,7 +31,7 @@
   padding: 2em;
   backdrop-filter: blur(25px) saturate(180%);
   -webkit-backdrop-filter: blur(25px) saturate(180%);
-  background-color: rgba(247, 255, 147, 0.75);
+  background-color: #A1E3D8;
   border-radius: 12px;
   border: 1px solid rgba(255, 255, 255, 0.125);
   overflow: auto;
@@ -42,7 +42,7 @@
 .modal-window h1 {
   font-size: 300%;
   margin: 0 0 15px;
-  color: rgb(0, 85, 85, 0.9);
+  color: #005555;
 }
 
 .modal-close {
