--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,8 @@
 /* Importing other CSS files */
 @import url(./home-section.css);
 @import url(./issues.css);
+@import url(./team-section.css);
+@import url(./goal-section.css);
 
 * {
   /* CSS properties for complete website */
@@ -119,42 +121,3 @@ body {
     text-align: left;
   }
 }
-
-.title {
-  font-size: 80px;
-  font-weight: bold;
-  color: #f7ff93;
-  margin-top: 20%;
-  margin-left: 10%;
-}
-
-@media screen and (max-width: 900px) {
-  .title {
-    font-size: 50px;
-    font-weight: bold;
-    color: #f7ff93;
-    margin-top: 12%;
-    margin-left: 60%;
-  }
-}
-
-@media screen and (max-width: 385px) {
-  .nav {
-    margin-left: -30px;
-  }
-}
-
-.heading {
-        margin-top: 100%;
-        text-align: left;
-        font-size: 80px;
-        margin-left: 10%;
-      }
-
-      .content-line {
-        padding-left: 0px;
-        margin-left: 10%;
-        margin-top: 6%;
-        font-size: 34px;
-        max-width: 80%;
-      }
