--- a/css/goal-section.css
+++ b/css/goal-section.css
@@ -4,15 +4,15 @@
 }
 
 .goal-title {
-  font-size: 40px;
+  font-size: 60px;
   font-weight: bold;
   color: #f7ff93;
-  margin-top: 20%;
+  padding-top: 300px;
 }
 
 .content-line {
   padding-left: 0px;
-  margin-top: 6%;
+  margin-top: 150px;
   font-size: 34px;
 }
 
