--- a/css/issues.css
+++ b/css/issues.css
@@ -269,3 +269,14 @@ b {
     margin-left: 10%;
   }
 }
+
+@media screen and (max-width:430px) {
+  .graph{
+    margin-left: 0%;
+    width: 100%;
+    height:300px
+  }   
+  .text{
+    font-size: 16px;
+  }
+}
