--- a/css/issues.css
+++ b/css/issues.css
@@ -138,15 +138,6 @@
   font-size: 48px;
 }
 
-.graph {
-  /* height: 90%; */
-  /* margin-left: 30%; */
-  width: 100%;
-  height: 500px;
-  text-align: center;
-  padding: 10px;
-}
-
 @media screen and (max-width: 1400px) {
   .btn {
     margin-left: -10%;
@@ -176,15 +167,12 @@
 }
 
 @media screen and (max-width: 1386px) {
-  .graph {
-    /* margin-left: 10%; */
-    /* height: 400px; */
-    width: 100%;
-    padding: 10px;
-  }
   .text {
     font-size: 24px;
   }
+}
+
+@media screen and (max-width: 950px) {
 }
 
 @media screen and (max-width: 720px) {
@@ -210,10 +198,6 @@
 }
 
 @media screen and (max-width: 595px) {
-  .graph {
-    margin-left: 1%;
-    height: 300px;
-  }
   .text {
     font-size: 20px;
   }
@@ -248,11 +232,6 @@ b {
 }
 
 @media screen and (max-width: 430px) {
-  .graph {
-    margin-left: 0%;
-    width: 100%;
-    height: 300px;
-  }
   .text {
     font-size: 16px;
   }
@@ -285,4 +264,16 @@ b {
     font-size: 36px;
     margin-left: 10%;
   }
+}
+
+.experiment {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 400px;
+}
+
+.experiment-2 {
+  height: 400px;
+  width: 500px;
 }
