--- a/css/issues.css
+++ b/css/issues.css
@@ -293,3 +293,59 @@ b {
     margin-left: 10%;
   }
 }
+
+
+@media screen and (max-height: 950px) {
+      .btn {
+    margin-left: 10%;
+    margin-top: 110%;
+    padding-top: 10px;
+    height: 200px;
+    width: 200px;
+  }
+  .btn2 {
+    margin-left: 10%;
+    margin-top: -150%;
+    padding-top: 10px;
+    height: 200px;
+
+    width: 200px;
+  }
+  .btn3 {
+    margin-left: 10%;
+    margin-top: -200%;
+    padding-top: 10px;
+    height: 200px;
+    width: 200px;
+  }
+}
+
+@media screen and (max-height: 660px) {
+    .btn {
+    margin-left: 10%;
+    margin-top: 200px;
+    padding-top: 10px;
+    height: 200px;
+    width: 200px;
+  }
+  .btn2 {
+    margin-left: 10%;
+    margin-top: -150%;
+    padding-top: 10px;
+    height: 200px;
+
+    width: 200px;
+  }
+  .btn3 {
+    margin-left: 10%;
+    margin-top: -200%;
+    padding-top: 10px;
+    height: 200px;
+    width: 200px;
+  }
+    .issues-heading {
+    font-size: 25px;
+    margin-left: 10%;
+    padding-top:0%;
+  }
+}
