--- a/css/issues.css
+++ b/css/issues.css
@@ -266,14 +266,14 @@ b {
   }
 }
 
-.experiment {
+.graph-container {
   display: flex;
   align-items: center;
   justify-content: center;
   height: 400px;
 }
 
-.experiment-2 {
+.graph {
   height: 400px;
   width: 500px;
 }
