--- a/css/goal-section.css
+++ b/css/goal-section.css
@@ -1,9 +1,13 @@
+/*
+* CSS File for the Goal section of our website.
+* Its imported directly to ./index.css
+*/
 
-/* goal screen */
+/* Goal Section Starts*/
 
 .goal-screen {
   margin-left: 150px;
-  margin-right: 50px; 
+  margin-right: 50px;
 }
 
 /* goal title */
@@ -38,21 +42,21 @@
   .nav {
     margin-left: -30px;
   }
-  .goal-title{
+  .goal-title {
     font-size: 40px;
     padding-top: 100px;
     margin-left: -80px;
   }
-  .content-line{
-    font-size:16px;
-    margin-top:40px;
+  .content-line {
+    font-size: 16px;
+    margin-top: 40px;
     margin-left: -80px;
     max-width: 100vh;
   }
 }
 
 @media screen and (max-height: 720px) {
-  .goal-title{
+  .goal-title {
     padding-top: 40%;
   }
 }
