--- a/css/issues.css
+++ b/css/issues.css
@@ -1,5 +1,3 @@
-
-
 /* description inside the modal */
 .modal-text {
   color: #005555;
@@ -100,7 +98,6 @@
   margin-top: 40%;
 }
 
-
 /* button to open modal2 */
 .btn2 {
   background: rgba(247, 255, 147, 0.4);
@@ -141,7 +138,6 @@
   padding-right: 0.3em;
 }
 
-
 /* 'Major environmental issues in today's age */
 .issues-heading {
   color: #f5f0da;
@@ -153,7 +149,12 @@
   font-size: 48px;
 }
 
+b {
+  color: #005555;
+}
+
 /* making the modals responsive */
+/* Media query at width = 1400 px */
 @media screen and (max-width: 1400px) {
   .btn {
     margin-left: -10%;
@@ -193,19 +194,14 @@
   width: 500px;
 }
 
-
+/* Media query at width = 1386 px */
 @media screen and (max-width: 1386px) {
-  .graph {
-    /* margin-left: 10%; */
-    /* height: 400px; */
-    width: 100%;
-    padding: 10px;
-  }
   .text {
     font-size: 24px;
   }
 }
 
+/* Media query at width = 720 px */
 @media screen and (max-width: 720px) {
   .btn {
     margin-left: 10%;
@@ -228,19 +224,14 @@
   }
 }
 
+/* Media query at width = 595 px */
 @media screen and (max-width: 595px) {
-  .graph {
-    margin-left: 1%;
-    height: 300px;
-  }
   .text {
     font-size: 20px;
   }
 }
-b {
-  color: #005555;
-}
 
+/* Media query at width = 517 px */
 @media screen and (max-width: 517px) {
   .btn {
     margin-left: 10%;
@@ -266,17 +257,14 @@ b {
   }
 }
 
+/* Media query at width = 430 px */
 @media screen and (max-width: 430px) {
-  .graph {
-    margin-left: 0%;
-    width: 100%;
-    height: 300px;
-  }
   .text {
     font-size: 16px;
   }
 }
 
+/* Media query at width = 385 px */
 @media screen and (max-width: 385px) {
   .btn {
     margin-left: 10%;
@@ -306,9 +294,10 @@ b {
   }
 }
 
-
+/* Media Quesries on heights starts */
+/* Media query at height = 950 px */
 @media screen and (max-height: 950px) {
-      .btn {
+  .btn {
     margin-left: 10%;
     margin-top: 110%;
     padding-top: 10px;
@@ -333,7 +322,7 @@ b {
 }
 
 @media screen and (max-height: 720px) {
-    .btn {
+  .btn {
     margin-left: 10%;
     margin-top: 200px;
     padding-top: 10px;
@@ -355,9 +344,9 @@ b {
     height: 200px;
     width: 200px;
   }
-    .issues-heading {
+  .issues-heading {
     font-size: 25px;
     margin-left: 10%;
-    padding-top:0%;
+    padding-top: 0%;
   }
 }
